# IDA_rust_metadata_finder

./: .gitignore  README.md  cache.py  pyproject.toml  requirements.txt  rust_metadata_finder.py  script.py
rusthelper/: extra_info.py  model.py  rust_doc_fetcher.py  rust_parser.py  utils.py
rusthelper/impl/: generic.py  ida_impl.py
