[project]
name = "rusthelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beaker>=1.13.0",
    "beautifulsoup4>=4.12.3",
    "construct>=2.10.70",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "pydantic-core>=2.27.2",
    "semver>=3.0.2",
    "tree-sitter==0.24.0",
    "tree-sitter-rust==0.23.2",
    "xdg-base-dirs>=6.0.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["N802", "D100", "D101", "ANN401"]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"